err/ipodshuffle.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Babel-2.5.1.dist-info'...
Listing './lib/python3.5/site-packages/babel'...
Listing './lib/python3.5/site-packages/babel/locale-data'...
Listing './lib/python3.5/site-packages/babel/localtime'...
Listing './lib/python3.5/site-packages/babel/messages'...
Listing './lib/python3.5/site-packages/ipodshuffle'...
Listing './lib/python3.5/site-packages/ipodshuffle/db'...
Listing './lib/python3.5/site-packages/ipodshuffle/storage'...
Listing './lib/python3.5/site-packages/ipodshuffle-0.4.1.dist-info'...
Listing './lib/python3.5/site-packages/langid'...
Listing './lib/python3.5/site-packages/langid/tools'...
Listing './lib/python3.5/site-packages/langid/train'...
Compiling './lib/python3.5/site-packages/langid/train/BLweight.py'...
***   File "./lib/python3.5/site-packages/langid/train/BLweight.py", line 84
    print "languages({1}): {0}".format(langs, len(langs))
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/langid/train/DFfeatureselect.py'...
***   File "./lib/python3.5/site-packages/langid/train/DFfeatureselect.py", line 92
    print "processed bucket (%d/%d) [%d keys]" % (i+1, len(bucketlist), keycount)
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/langid/train/IGweight.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (IGweight.py, line 101)
Compiling './lib/python3.5/site-packages/langid/train/LDfeatureselect.py'...
***   File "./lib/python3.5/site-packages/langid/train/LDfeatureselect.py", line 94
    print "model path:", args.model
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/langid/train/NBtrain.py'...
***   File "./lib/python3.5/site-packages/langid/train/NBtrain.py", line 167
    print "learning NB parameters on {} items".format(len(items))
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/langid/train/index.py'...
***   File "./lib/python3.5/site-packages/langid/train/index.py", line 253
    print "corpus path:", args.corpus
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/langid/train/scanner.py'...
***   File "./lib/python3.5/site-packages/langid/train/scanner.py", line 193
    print "building scanner"
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/langid/train/tokenize.py'...
***   File "./lib/python3.5/site-packages/langid/train/tokenize.py", line 239
    print "chunk size: {0} ({1} chunks)".format(chunk_size, chunk_count)
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/langid/train/train.py'...
***   File "./lib/python3.5/site-packages/langid/train/train.py", line 105
    print "corpus path:", args.corpus
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/langid-1.1.6.egg-info'...
Listing './lib/python3.5/site-packages/mutagen'...
Listing './lib/python3.5/site-packages/mutagen/_senf'...
Listing './lib/python3.5/site-packages/mutagen/_tools'...
Listing './lib/python3.5/site-packages/mutagen/asf'...
Listing './lib/python3.5/site-packages/mutagen/id3'...
Listing './lib/python3.5/site-packages/mutagen/mp3'...
Listing './lib/python3.5/site-packages/mutagen/mp4'...
Listing './lib/python3.5/site-packages/mutagen-1.39.egg-info'...
Listing './lib/python3.5/site-packages/numpy'...
Listing './lib/python3.5/site-packages/numpy/.libs'...
Listing './lib/python3.5/site-packages/numpy/compat'...
Listing './lib/python3.5/site-packages/numpy/core'...
Listing './lib/python3.5/site-packages/numpy/core/include'...
Listing './lib/python3.5/site-packages/numpy/core/include/numpy'...
Listing './lib/python3.5/site-packages/numpy/core/lib'...
Listing './lib/python3.5/site-packages/numpy/core/lib/npy-pkg-config'...
Listing './lib/python3.5/site-packages/numpy/core/tests'...
Listing './lib/python3.5/site-packages/numpy/core/tests/data'...
Listing './lib/python3.5/site-packages/numpy/distutils'...
Listing './lib/python3.5/site-packages/numpy/distutils/command'...
Listing './lib/python3.5/site-packages/numpy/distutils/fcompiler'...
Listing './lib/python3.5/site-packages/numpy/distutils/mingw'...
Listing './lib/python3.5/site-packages/numpy/distutils/tests'...
Listing './lib/python3.5/site-packages/numpy/doc'...
Listing './lib/python3.5/site-packages/numpy/f2py'...
Listing './lib/python3.5/site-packages/numpy/f2py/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/array_from_pyobj'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/assumed_shape'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/common'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/kind'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/mixed'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/parameter'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/regression'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/size'...
Listing './lib/python3.5/site-packages/numpy/f2py/tests/src/string'...
Listing './lib/python3.5/site-packages/numpy/fft'...
Listing './lib/python3.5/site-packages/numpy/fft/tests'...
Listing './lib/python3.5/site-packages/numpy/lib'...
Listing './lib/python3.5/site-packages/numpy/lib/tests'...
Listing './lib/python3.5/site-packages/numpy/lib/tests/data'...
Listing './lib/python3.5/site-packages/numpy/linalg'...
Listing './lib/python3.5/site-packages/numpy/linalg/tests'...
Listing './lib/python3.5/site-packages/numpy/ma'...
Listing './lib/python3.5/site-packages/numpy/ma/tests'...
Listing './lib/python3.5/site-packages/numpy/matrixlib'...
Listing './lib/python3.5/site-packages/numpy/matrixlib/tests'...
Listing './lib/python3.5/site-packages/numpy/polynomial'...
Listing './lib/python3.5/site-packages/numpy/polynomial/tests'...
Listing './lib/python3.5/site-packages/numpy/random'...
Listing './lib/python3.5/site-packages/numpy/random/tests'...
Listing './lib/python3.5/site-packages/numpy/testing'...
Listing './lib/python3.5/site-packages/numpy/testing/nose_tools'...
Listing './lib/python3.5/site-packages/numpy/testing/tests'...
Listing './lib/python3.5/site-packages/numpy/tests'...
Listing './lib/python3.5/site-packages/numpy-1.14.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/teresa'...
Listing './lib/python3.5/site-packages/teresa/locale'...
Listing './lib/python3.5/site-packages/teresa/locale/zh_CN'...
Listing './lib/python3.5/site-packages/teresa/locale/zh_CN/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/teresa/tts'...
Listing './share'...
Listing './share/locale'...
Listing './share/locale/zh_CN'...
Listing './share/locale/zh_CN/LC_MESSAGES'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
